--- a/trangchu.html
+++ b/trangchu.html
@@ -1,1 +1,56 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title> Giới thiệu bản thân </title>
+</head>
+<body>
+    <p> 
+        <b> Chào mừng các bạn đến với trang web của tôi </b>
+    </p>
+    <p>
+        <b>Tôi tên:</b> Võ Trung Cang 
+        <br /> <b>Năm sinh: </b> 2003 
+        <br /> <b> Nơi ở: </b> Ninh Hòa 
+        <br />
+    <a href="https://www.facebook.com/votrung.cang.1/">
+        Thông tin liên hệ
+    </a>
+        <br /> <b> Sở Thích: </b> Ngồi thiền
+        <br /> <b> Đang học tại: </b> Trường cao Dẳng Kỹ Thuật Công Nghệ Nha Trang
+        <br /> <img src="https://hocthilaixe.com/upload/news/truong-cao-dang-ky-thuat-cong-nghe-nha-trang-9499.jpg" />
+    </p>
+    <p>
+        <b> Thời Khóa biểu đi học </b>
+    <table border="2" cellspacing="0" cellpadding="5">
+        <tr>
+            <td> </td>
+            <td> Thứ 2</td>
+            <td> Thứ 3 </td>
+            <td> Thứ 4 </td>
+            <td> Thứ 5 </td>
+            <td> Thứ 6 </td>
+            <td> Thứ 7 </td>
+        </tr>
+        <tr> 
+            <td> Buổi sáng </td>
+            <td>  </td>
+            <td> Cấu trúc dữ Liệu và giải thật </td>
+            <td> </td>
+            <td> Tiếng anh CN </td>
+            <td>Cơ sở dữ liệu </td>
+            <td> Thiết kế Và quản trị website </td>
+        </tr>
+        <tr>
+            <td> Buổi chiều </td>
+            <td> Lập trình python Cơ bản </td>
+            <td> Lập trình python cơ bản </td>
+            <td> Lắp ráp và bảo trì máy tính </td>
+            <td> Giáo dục thể chất </td>
+            <td> thiết kế và quản trị website </td>
+            <td> </td>
+        </tr>
+    </table>
+    </p>
+    
+</body>
+</html>
