--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
 	</h3>
 	<br />
 	<h3 align="center">
-	<a href="#">
-		<font face="Lato" color="#000">GET STARTED</font>
+	<a href="https://github.com/votrungcang?tab=repositories">
+		<font face="Lato" color="#000" >My GITHUB</font>
 	</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="#">
-		<font face="Lato" color="#fff">SUBSCRIBE US</font>
+		<font face="Lato" color="#fff">FACEBOOK</font>
 	</a>
 	</h3>
+    
 </body>
 </html>
